# V2.0

./: CMakeLists.txt  README.md  V.01.3.sln  V.01.sln  V0.1.4(masyvas).sln  V0.1.4.sln  V0.2.sln  V0.5.sln  V1.0.sln  V1.1.sln  V1.2.sln  V1.5.sln  V2.0.sln  v0.3.sln  v0.4.sln
V.01/: V.01.cpp  V.01.vcxproj
V.01.3/: V.01.3.cpp  V.01.3.vcxproj
V0.1.4/: V0.1.4.cpp  V0.1.4.vcxproj
V0.1.4(masyvas)/: V0.1.4(masyvas).cpp  V0.1.4(masyvas).vcxproj
V0.2/: Input.cpp  Input_2.cpp  Output.cpp  V0.2.cpp  V0.2.vcxproj
V0.5/: Balas_list.cpp  Balas_list.h  Generavimas.cpp  Generavimas.h  Input.h  Input_2.cpp  Input_list.cpp  Input_list.h  Output.h  Output_2.cpp  Output_list.cpp  Output_list.h  Studentas.h  Studentas_list.h  V0.5.cpp  V0.5.vcxproj  V0.5.vcxproj.filters
V1.0/: Balas.cpp  Balas.h  Generavimas.cpp  Generavimas.h  Input_list.cpp  Input_list.h  Kopijavimas.cpp  Kopijavimas.h  Output_list.cpp  Output_list.h  Studentas.h  Trynimas.cpp  Trynimas.h  V1.0.cpp
V1.1/: Input_class.cpp  Input_struct.cpp  Studentas_class.cpp  Studentas_class.h  Studentas_struct.h  Trynimas_class.cpp  Trynimas_class.h  Trynimas_struct.cpp  V1.1.cpp
V1.2/: Input_struct.h  Studentas_class.cpp  Studentas_class.h  Trynimas_struct.h  V1.2.cpp
V1.5/: Asmuo.h  Input_class.cpp  Input_class.h  Laikas.h  Studentas_class.cpp  Studentas_class.h  Trynimas_class.cpp  V1.5.cpp
V2.0/: Asmuo.h  Input_class.cpp  Laikas.h  Studentas_class.cpp  Studentas_class.h  Trynimas_class.cpp  V2.0.cpp
html/: _asmuo_8h.html  _asmuo_8h_source.html  _input__class_8cpp.html  _input__class_8h.html  _laikas_8h.html  (+30 more)
(+48 files in other folders)
